#Feature Updated code smells and added a call to verifyEvidence in saveEvidence within EvidenceService